// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KTable has hover class when passed 1`] = `
<table class="k-table has-hover">
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        ID
      </th>
      <th>
        Enabled
      </th>
      <th>
        <!---->
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Basic Auth
      </td>
      <td>
        517526354743085
      </td>
      <td>
        true
      </td>
      <td>

      </td>
    </tr>
    <tr>
      <td>
        Website Desktop
      </td>
      <td>
        328027447731198
      </td>
      <td>
        false
      </td>
      <td>

      </td>
    </tr>
    <tr>
      <td>
        Android App
      </td>
      <td>
        405383051040955
      </td>
      <td>
        true
      </td>
      <td>

      </td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable has small class when passed 1`] = `
<table class="k-table is-small">
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        ID
      </th>
      <th>
        Enabled
      </th>
      <th>
        <!---->
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Basic Auth
      </td>
      <td>
        517526354743085
      </td>
      <td>
        true
      </td>
      <td>

      </td>
    </tr>
    <tr>
      <td>
        Website Desktop
      </td>
      <td>
        328027447731198
      </td>
      <td>
        false
      </td>
      <td>

      </td>
    </tr>
    <tr>
      <td>
        Android App
      </td>
      <td>
        405383051040955
      </td>
      <td>
        true
      </td>
      <td>

      </td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable renders link in action slot 1`] = `
<table class="k-table">
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        ID
      </th>
      <th>
        Enabled
      </th>
      <th>
        <!---->
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Basic Auth
      </td>
      <td>
        517526354743085
      </td>
      <td>
        true
      </td>
      <td><a href="#">Link</a></td>
    </tr>
    <tr>
      <td>
        Website Desktop
      </td>
      <td>
        328027447731198
      </td>
      <td>
        false
      </td>
      <td><a href="#">Link</a></td>
    </tr>
    <tr>
      <td>
        Android App
      </td>
      <td>
        405383051040955
      </td>
      <td>
        true
      </td>
      <td><a href="#">Link</a></td>
    </tr>
  </tbody>
</table>
`;
